--- a/administration/templates/sase.html
+++ b/administration/templates/sase.html
@@ -26,6 +26,10 @@
                             <i class="fas fa-shopping-cart mr-3"></i>
                             Orders
                         </a>
+                        <a href="{% url 'logout' %}" class="flex items-center px-4 py-3 text-sm font-medium text-indigo-200 hover:text-white hover:bg-indigo-700 rounded-lg">
+                            <i class="fas fa-sign-out-alt mr-3"></i>
+                            Logout
+                        </a>
                         <!--<a href="#" class="flex items-center px-4 py-3 text-sm font-medium text-indigo-200 hover:text-white hover:bg-indigo-700 rounded-lg">
                             <i class="fas fa-users mr-3"></i>
                             Customers
