--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <!-- Image Gallery (Placeholder) -->
-                    <div class="grid grid-cols-4 gap-3">
+                   <!-- <div class="grid grid-cols-4 gap-3">
                         {% for i in "1234" %}
                         <div class="bg-white dark:bg-gray-800 rounded-lg p-2 border border-gray-200 dark:border-gray-700 cursor-pointer hover:border-primary-400 transition-colors">
                             <div class="h-16 bg-gray-100 dark:bg-gray-700 rounded flex items-center justify-center">
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         {% endfor %}
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
